# dart_tinydtls_libs

./: .gitignore  .gitmodules  .pubignore  CHANGELOG.md  LICENSE  README.md  compile_binaries.sh  pubspec.yaml
.github/workflows/: build-status.yml
.gitlab/: CODEOWNERS
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/me/namib/dart_tinydtls_libs/: DartTinydtlsLibsPlugin.kt
common/: CMakeLists.txt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/me/namib/dart_tinydtls_libs_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: dart_tinydtls_libs.podspec
ios/Classes/: dart_tinydtls_libs.c
lib/: dart_tinydtls_libs.dart
linux/: CMakeLists.txt  dart_tinydtls_libs_plugin.cc
linux/include/dart_tinydtls_libs/: dart_tinydtls_libs_plugin.h
macos/: dart_tinydtls_libs.podspec
test/: dart_tinydtls_libs_test.dart
windows/: CMakeLists.txt  dart_tinydtls_libs_plugin.cpp
windows/include/dart_tinydtls_libs/: dart_tinydtls_libs_plugin.h
